# rusty_advent_of_code

./: README.md  aoc_rs.sh
aoc2022/: Cargo.toml  README.md
aoc2022/src/: lib.rs
