[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "day01_part1"
path = "src/bin/day_01/part1.rs"

[[bin]]
name = "day01_part2"
path = "src/bin/day_01/part2.rs"

[[bin]]
name = "day02_part1"
path = "src/bin/day_02/part1.rs"

[[bin]]
name = "day02_part2"
path = "src/bin/day_02/part2.rs"

[[bin]]
name = "day03_part1"
path = "src/bin/day_03/part1.rs"

[[bin]]
name = "day03_part2"
path = "src/bin/day_03/part2.rs"

[[bin]]
name = "day04_part1"
path = "src/bin/day_04/part1.rs"

[[bin]]
name = "day04_part2"
path = "src/bin/day_04/part2.rs"

[[bin]]
name = "day05_part1"
path = "src/bin/day_05/part1.rs"

[[bin]]
name = "day05_part2"
path = "src/bin/day_05/part2.rs"

[[bin]]
name = "day06_part1"
path = "src/bin/day_06/part1.rs"

[[bin]]
name = "day06_part2"
path = "src/bin/day_06/part2.rs"

[[bin]]
name = "day07_part1"
path = "src/bin/day_07/part1.rs"

[[bin]]
name = "day07_part2"
path = "src/bin/day_07/part2.rs"

[[bin]]
name = "day08_part1"
path = "src/bin/day_08/part1.rs"

[[bin]]
name = "day08_part2"
path = "src/bin/day_08/part2.rs"

[[bin]]
name = "day09_part1"
path = "src/bin/day_09/part1.rs"

[[bin]]
name = "day09_part2"
path = "src/bin/day_09/part2.rs"

[[bin]]
name = "day10_part1"
path = "src/bin/day_10/part1.rs"

[[bin]]
name = "day10_part2"
path = "src/bin/day_10/part2.rs"

[[bin]]
name = "day11_part1"
path = "src/bin/day_11/part1.rs"

[[bin]]
name = "day11_part2"
path = "src/bin/day_11/part2.rs"

[[bin]]
name = "day12_part1"
path = "src/bin/day_12/part1.rs"

[[bin]]
name = "day12_part2"
path = "src/bin/day_12/part2.rs"

[[bin]]
name = "day13_part1"
path = "src/bin/day_13/part1.rs"

[[bin]]
name = "day13_part2"
path = "src/bin/day_13/part2.rs"

[[bin]]
name = "day14_part1"
path = "src/bin/day_14/part1.rs"

[[bin]]
name = "day14_part2"
path = "src/bin/day_14/part2.rs"

[[bin]]
name = "day15_part1"
path = "src/bin/day_15/part1.rs"

[[bin]]
name = "day15_part2"
path = "src/bin/day_15/part2.rs"

[[bin]]
name = "day16_part1"
path = "src/bin/day_16/part1.rs"

[[bin]]
name = "day16_part2"
path = "src/bin/day_16/part2.rs"

[[bin]]
name = "day17_part1"
path = "src/bin/day_17/part1.rs"

[[bin]]
name = "day17_part2"
path = "src/bin/day_17/part2.rs"

[[bin]]
name = "day18_part1"
path = "src/bin/day_18/part1.rs"

[[bin]]
name = "day18_part2"
path = "src/bin/day_18/part2.rs"

[[bin]]
name = "day19_part1"
path = "src/bin/day_19/part1.rs"

[[bin]]
name = "day19_part2"
path = "src/bin/day_19/part2.rs"

[[bin]]
name = "day20_part1"
path = "src/bin/day_20/part1.rs"

[[bin]]
name = "day20_part2"
path = "src/bin/day_20/part2.rs"

[[bin]]
name = "day21_part1"
path = "src/bin/day_21/part1.rs"

[[bin]]
name = "day21_part2"
path = "src/bin/day_21/part2.rs"

[[bin]]
name = "day22_part1"
path = "src/bin/day_22/part1.rs"

[[bin]]
name = "day22_part2"
path = "src/bin/day_22/part2.rs"

[[bin]]
name = "day23_part1"
path = "src/bin/day_23/part1.rs"

[[bin]]
name = "day23_part2"
path = "src/bin/day_23/part2.rs"

[[bin]]
name = "day24_part1"
path = "src/bin/day_24/part1.rs"

[[bin]]
name = "day24_part2"
path = "src/bin/day_24/part2.rs"

[[bin]]
name = "day25_part1"
path = "src/bin/day_25/part1.rs"

[[bin]]
name = "day25_part2"
path = "src/bin/day_25/part2.rs"

